# Termlink

./: AGENTS.md  CLAUDE.md  README.md  debug-remote-tree.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.regression.json  vite.config.ts
.claude/: index.json
.claude/plan/: remote-file-workbench-refactor.md  ssh-security-and-connection-reuse.md
.context/history/: commits.jsonl  commits.md
.context/prefs/: coding-style.md
.helloagents/: CHANGELOG.md  INDEX.md  context.md
.helloagents/archive/: _index.md
.helloagents/modules/: _index.md  app-shell.md  desktop-backend.md  ui-components.md
src/: App.vue  CLAUDE.md  auto-imports.d.ts  components.d.ts  debug-remote-tree.ts  main.ts  style.css
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_key.rs  connection_manager.rs  connection_store.rs  credential_store.rs  download_manager.rs  fs.rs  host_key_store.rs  import_export.rs  lib.rs  sftp_russh.rs  ssh.rs  ssh_auth.rs  ssh_command.rs  ssh_terminal_russh.rs  system_monitor.rs  terminal.rs
src/components/: ConnectionHub.vue  DownloadManager.vue  FileEditor.vue  FileManager.vue  HelloWorld.vue  HostCenter.vue  RemoteFileWorkbench.vue  RightPanel.vue  SettingsModal.vue  Sidebar.vue  SshModal.vue  SshWorkspace.vue  StatusBar.vue  SystemMonitor.vue  TabManager.vue  Terminal.vue  TopMenu.vue
src/composables/: rightPanelMonitorDerived.ts  useConnectionCatalog.ts  useHostCatalog.ts  useRemoteFileActions.ts  useRightPanelMonitor.ts  useRightPanelTransfers.ts  useSshConnectionFlow.ts  (+3 more)
(+164 files in other folders)
