[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = { version = "2.8.0", features = ["colored"] }
portable-pty = "0.9.0"
once_cell = "1.21.4"
parking_lot = "0.12.5"
crossbeam-channel = "0.5.15"
keyring = "3.6.3"
directories = "6.0.0"
dirs = "6.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1.50.0", features = ["full"] }
russh = "0.57.1"
russh-keys = "0.49.2"
russh-sftp = "2.1.1"
async-trait = "0.1.89"
futures = "0.3.32"
lazy_static = "1.5.0"
sha2 = "0.10.9"
base64 = "0.22.1"
aes-gcm = "0.10.3"
rand = "0.8.5"
